react skeleton improved, data passing basics

--- a/client/scss/reactmovie.scss
+++ b/client/scss/reactmovie.scss
@@ -10,6 +10,7 @@ $detailsContainerFontColor: #000000;
   position: absolute;
   padding: 0;
   bottom: 0;
+  width: auto;
 
   z-index: $detailsContainerZIndex;
 
@@ -48,8 +49,6 @@ $detailsContainerFontColor: #000000;
 
   }
 }
-
-
 
 .backdrop {
   position: absolute;
