--- a/client/scss/reactmovie.scss
+++ b/client/scss/reactmovie.scss
@@ -1,5 +1,5 @@
 $fontColor: #ffffff;
-$posterSize: 100%;
+$posterSize: 80%;
 $detailsContainerZIndex: 1;
 $detailsContainerFontColor: #000000;
 
@@ -16,7 +16,6 @@ $detailsContainerFontColor: #000000;
 
   .poster {
     padding: 0px;
-    padding-left: 1em;
 
     img {
       max-width: $posterSize;
@@ -26,7 +25,7 @@ $detailsContainerFontColor: #000000;
   }
 
   .textContainer {
-    padding-right: 0px;
+    padding: 0px;
 
     h3 {
       margin-top: 0.4em;
@@ -36,7 +35,7 @@ $detailsContainerFontColor: #000000;
   .ratingYearContainer {
     text-align: right;
     padding-left: 0;
-    padding-right: 0.3em;
+    padding-right: 1.5em;
 
     h3 {
       font-size: 1.3em;
@@ -47,18 +46,26 @@ $detailsContainerFontColor: #000000;
       }
     }
 
+    img {
+        width: auto;
+    }
   }
 }
 
-.backdrop {
-  position: absolute;
-  z-index: 0;
+.col-md-12 .moviesContainer {
+  padding: 0px;
 
-  img {
-      width: auto;
+  .movie {
+    display: block;
+    padding: 0 15px 0 0;
+
+    .backdrop {
+      z-index: 0;
+      padding: 0px;
+
+      img {
+        width: 100%;
+      }
+    }
   }
-}
-
-.movie {
-  display: inline;
 }
