--- a/client/scss/reactmovie.scss
+++ b/client/scss/reactmovie.scss
@@ -58,6 +58,7 @@ $detailsContainerFontColor: #000000;
   .movie {
     display: block;
     padding: 0 15px 0 0;
+    margin-top: 1em;
 
     .backdrop {
       z-index: 0;
