--- a/client/hbs/index.hbs
+++ b/client/hbs/index.hbs
@@ -19,6 +19,6 @@
     <script type="text/javascript" src="../jslib/jquery.min.js"></script>
     <script type="text/javascript" src="../jslib/bootstrap.min.js"></script>
     <script type="text/javascript" src="../jslib/react-with-addons.js"></script>
-    <script type="text/javascript" src="/assets/"></script>
+    <script type="text/javascript" src="{{ assetPath "../js/all.min.js" }}"></script>
   </body>
 </html>
