--- a/client/scss/reactmovie.scss
+++ b/client/scss/reactmovie.scss
@@ -65,48 +65,46 @@ $detailsContainerFontColor: #000;
 
 //SMALLEST RESOLUTION
 @media(max-width: $screen-small-max) {
-
   .container {
     padding: 0;
-  }
 
-  #innerContainer {
-    padding-left: 0px;
-    padding-right: 0px;
-  }
-
-  .col-md-12 .moviesContainer {
-
-    .movie {
+    #innerContainer {
+      padding-left: 0px;
       padding-right: 0px;
-      box-shadow: 3px 3px 5px #888888;
 
-      .textContainer {
-        h5 {
-          font-size: 1.3em;
+      .moviesContainer {
+
+        .movie {
+          padding-right: 0px;
+          box-shadow: 3px 3px 5px #888888;
+
+          .backdrop {
+            img {
+
+            }
+          }
+
+          .detailsContainer {
+            width: 100%;
+            max-height: 5em;
+            .poster {
+              display: none;
+            }
+            .textContainer {
+              text-align: center;
+              h3 {
+                margin-top: 0.3em;
+              }
+              h5 {
+                font-size: 1.3em;
+              }
+            }
+            .description {
+              display:none;
+            }
+          }
         }
       }
-    }
-  }
-
-  .col-md-12 .backdrop {
-    img {
-
-    }
-  }
-  .col-md-12 .detailsContainer {
-    width: 100%;
-    .poster {
-      display: none;
-    }
-    .textContainer {
-      text-align: center;
-      h3 {
-        margin-top: 0.8em;
-      }
-    }
-    .description {
-      display:none;
     }
   }
 }
