--- a/client/scss/reactmovie.scss
+++ b/client/scss/reactmovie.scss
@@ -3,65 +3,19 @@ $screen-small-max: 767px;
 $screen-medium-min: 768px;
 $screen-high-min: 992px;
 $screen-ultrahigh-min: 1200px;
-$posterSize: 80%;
+$posterSize: 100%;
+
+$movieBoxShadow: 3px 3px 5px #888888;
+
 $detailsContainerZIndex: 1;
 $detailsContainerFontColor: #000;
+$detailsContainerBackgroundColor: rgba(255, 255, 255, 0.7);
+$detailsContainerPosition: absolute;
+$detailsContainerPadding: 0;
+$detailsContainerBottom: 0;
+$detailsContainerWidth: auto;
 
 
-
-
-.col-md-12 .detailsContainer {
-  color: $detailsContainerFontColor;
-  background: rgba(255, 255, 255, 0.5);
-  position: absolute;
-  padding: 0;
-  bottom: 0;
-  width: auto;
-  z-index: $detailsContainerZIndex;
-  .poster {
-    padding: 0;
-    img {
-      max-width: $posterSize;
-      padding: 0 0 0 1px;
-    }
-  }
-  .textContainer {
-    padding: 0;
-    h3 {
-      margin-top: 0.4em;
-    }
-  }
-  .ratingYearContainer {
-    text-align: right;
-    padding-left: 0;
-    padding-right: 1.5em;
-    h3 {
-      font-size: 1.3em;
-      margin-top: 0.4em;
-      i {
-        margin-left: 0.3em;
-      }
-    }
-    img {
-      width: auto;
-    }
-  }
-}
-.col-md-12 .moviesContainer {
-  padding: 0;
-  .movie {
-    display: block;
-    padding: 0 15px 0 0;
-    margin-top: 1em;
-    .backdrop {
-      z-index: 0;
-      padding: 0;
-      img {
-        width: 100%;
-      }
-    }
-  }
-}
 
 //SMALLEST RESOLUTION
 @media(max-width: $screen-small-max) {
@@ -76,7 +30,7 @@ $detailsContainerFontColor: #000;
 
         .movie {
           padding-right: 0px;
-          box-shadow: 3px 3px 5px #888888;
+          box-shadow: $movieBoxShadow;
 
           .backdrop {
             img {
@@ -85,7 +39,13 @@ $detailsContainerFontColor: #000;
           }
 
           .detailsContainer {
-            width: 100%;
+            color: $detailsContainerFontColor;
+            background: $detailsContainerBackgroundColor;
+            position: $detailsContainerPosition;
+            padding: $detailsContainerPadding;
+            bottom: $detailsContainerBottom;
+            width: $detailsContainerWidth;
+            z-index: $detailsContainerZIndex;
             max-height: 5em;
             .poster {
               display: none;
@@ -96,7 +56,7 @@ $detailsContainerFontColor: #000;
                 margin-top: 0.3em;
               }
               h5 {
-                font-size: 1.3em;
+                font-size: 0.8em;
               }
             }
             .description {
@@ -109,7 +69,79 @@ $detailsContainerFontColor: #000;
   }
 }
 @media(min-width: $screen-medium-min) {
-  .col-md-6 .col-xs-12 .movie {
-    padding-top: 170px;
+  .container {
+    padding-left: 0px;
+    padding-right: 0px;
+
+    #innerContainer {
+      padding-left: 0px;
+      padding-right: 0px;
+
+      .moviesContainer {
+        padding: 0;
+        .movie {
+          display: block;
+          padding: 0 0 0 0;
+          margin-right: 0em;
+          margin-top: 1em;
+          box-shadow: $movieBoxShadow;
+          .backdrop {
+            z-index: 0;
+            padding: 0;
+            img {
+              width: 100%;
+            }
+          }
+
+
+          .detailsContainer {
+            color: $detailsContainerFontColor;
+            background: $detailsContainerBackgroundColor;
+            position: $detailsContainerPosition;
+            padding: $detailsContainerPadding;
+            bottom: $detailsContainerBottom;
+            width: $detailsContainerWidth;
+            z-index: $detailsContainerZIndex;
+            max-height: 10em;
+            .poster {
+              padding: 0;
+              img {
+                max-width: $posterSize;
+                padding: 0 0 0 1px;
+              }
+            }
+            .textContainer {
+              padding: 0;
+              padding-left: 1em;
+              h3 {
+                margin-top: 0.3em;
+              }
+              h5 {
+                font-size: 1em;
+              }
+            }
+            .description {
+
+            }
+
+            .ratingYearContainer {
+              text-align: right;
+              padding-left: 0;
+              padding-right: 0.5em;
+              h3 {
+                font-size: 1.3em;
+                margin-top: 0.4em;
+                i {
+                  margin-left: 0.3em;
+                }
+              }
+              img {
+                width: auto;
+              }
+            }
+          }
+        }
+      }
+    }
   }
 }
