--- a/client/scss/reactmovie.scss
+++ b/client/scss/reactmovie.scss
@@ -3,7 +3,7 @@ $screen-small-max: 767px;
 $screen-medium-min: 768px;
 $screen-high-min: 992px;
 $screen-ultrahigh-min: 1200px;
-$posterSize: 100%;
+$posterSize: 97%;
 
 $movieBoxShadow: 3px 3px 5px #888888;
 
@@ -35,7 +35,7 @@ $detailsContainerWidth: auto;
       padding-right: 0px;
 
       .moviesContainer {
-
+        padding-bottom: 15px;
         .movie {
           margin-top: 1em;
           padding: 0 0 0 0;
@@ -141,6 +141,81 @@ $detailsContainerWidth: auto;
               padding-right: 0.5em;
               h3 {
                 font-size: 1.3em;
+                margin-top: 0.4em;
+                i {
+                  margin-left: 0.3em;
+                }
+              }
+              img {
+                width: auto;
+              }
+            }
+          }
+        }
+      }
+    }
+  }
+}
+
+@media(min-width: $screen-ultrahigh-min) {
+  .container {
+    padding-left: 0px;
+    padding-right: 0px;
+
+    #innerContainer {
+      padding-left: 0px;
+      padding-right: 0px;
+
+      .moviesContainer {
+        padding: 0;
+        .movie {
+          display: block;
+          padding: 0 0 0 0;
+          margin-right: 0em;
+          margin-top: 1em;
+          box-shadow: $movieBoxShadow;
+          .backdrop {
+            z-index: 0;
+            padding: 0;
+            img {
+              width: 100%;
+            }
+          }
+
+
+          .detailsContainer {
+
+            max-height: 8em;
+            .poster {
+              padding: 0;
+              img {
+                max-width: 105%;
+                padding: 0 0 0 1px;
+              }
+            }
+            .textContainer {
+              padding: 0;
+              padding-left: 1em;
+              h3 {
+                margin-top: 0.3em;
+                margin-bottom: 0.2em;
+              }
+              h5 {
+                text-align: justify;
+                font-size: 1em;
+                margin: 0;
+              }
+            }
+            .description {
+
+            }
+
+            .ratingYearContainer {
+              text-align: right;
+              padding-left: 0;
+              padding-right: 0.5em;
+              h3 {
+                font-size: 1em;
                 margin-top: 0.4em;
                 i {
                   margin-left: 0.3em;
