--- a/client/hbs/index.hbs
+++ b/client/hbs/index.hbs
@@ -11,6 +11,9 @@
     <link rel="stylesheet" href="{{ cssPath "allscss.css" }}" media="screen" charset="utf-8">
   </head>
   <body>
+    <div id="navBar">
+
+    </div>
     <div class="container">
       <div class="col-md-12" id="innerContainer">
 
