--- a/client/temp-css/allscss.css
+++ b/client/temp-css/allscss.css
@@ -3,15 +3,25 @@
     display: none; } }
 
 @media (min-width: 768px) {
-  #navBar .nav {
+  #navBar {
+    text-align: center;
+    top: 0px;
+    position: fixed;
     width: 100%;
-    float: left;
-    margin: 0 0 0.3em 0;
-    list-style: none;
-    background: #878787;
-    box-shadow: 3px 3px 5px #888888; }
-    #navBar .nav li {
-      float: right; } }
+    z-index: 2; }
+    #navBar .nav {
+      width: 100%;
+      height: 3em;
+      text-align: center;
+      padding-top: 0.6em;
+      background: #90C3D4;
+      opacity: 0.8;
+      filter: alpha(opacity=50);
+      box-shadow: 0px 5px 5px #D1D1D1; }
+      #navBar .nav li {
+        display: inline;
+        padding: 0 1em 0 1em;
+        font-size: 1.2em; } }
 
 
 
@@ -65,6 +75,7 @@
 
 @media (min-width: 768px) {
   .container {
+    margin-top: 3em;
     padding-left: 0px;
     padding-right: 0px; }
     .container #innerContainer {
@@ -111,6 +122,7 @@
 
 @media (min-width: 1200px) {
   .container {
+    margin-top: 3em;
     padding-left: 0px;
     padding-right: 0px; }
     .container #innerContainer {
