mobile view burger-menu react components and basic css

--- a/client/scss/navbar.scss
+++ b/client/scss/navbar.scss
@@ -2,19 +2,57 @@ $screen-small-max: 767px;
 $screen-medium-min: 768px;
 $screen-high-min: 992px;
 $screen-ultrahigh-min: 1200px;
-
-$navbarBackground: #90C3D4;
+$navbarBackground: rgba(58, 146, 255, 0.8);
 $navbarBoxShadow: 0px 5px 5px #D1D1D1;
 
 //SMALLEST RESOLUTION
 @media(max-width: $screen-small-max) {
-  .nav {
+  #navBar {
     display: none;
   }
+
+  .navbarMobileClosed {
+    display: inline;
+    text-align: center;
+    top: 0px;
+    position: fixed;
+    width: 100%;
+    z-index: 2;
+
+    width: 100%;
+    height: 3em;
+    text-align: center;
+    padding-top: 0.6em;
+
+    background: $navbarBackground;
+
+  }
+
+  #mobileNavBarLinks {
+    display: none;
+    z-index: 3;
+    position: absolute;
+
+    .navbarDivOpened {
+      background: $navbarBackground;
+      text-align: center;
+      padding-top: 3em;
+      width: 100%;
+    }
+  }
+
 }
 
 //MEDIUM RESOLUTION
 @media(min-width: $screen-medium-min) {
+  #mobileNavBar {
+    display: none;
+  }
+
+  #mobileNavBarLinks {
+    display: none;
+  }
+
   #navBar {
     text-align: center;
     top: 0px;
@@ -29,14 +67,13 @@ $navbarBoxShadow: 0px 5px 5px #D1D1D1;
       padding-top: 0.6em;
 
       background: $navbarBackground;
-      opacity: 0.8;
-      filter: alpha(opacity=50);
       box-shadow: $navbarBoxShadow;
 
       li {
         display: inline;
         padding: 0 1em 0 1em;
-        font-size: 1.2em;
+        font-size: 1.5em;
+        color: white;
       }
     }
   }
