--- a/client/hbs/index.hbs
+++ b/client/hbs/index.hbs
@@ -11,14 +11,24 @@
     <link rel="stylesheet" href="{{ cssPath "allscss.css" }}" media="screen" charset="utf-8">
   </head>
   <body>
-    <div id="navBar">
 
+    <!-- NAVBAR -->
+    <div id="navBar">
+    </div>
+
+    <div id="mobileNavBar">
+    </div>
+    <div id="mobileNavBarLinks">
+    </div>
+
+    <!-- CONTENT -->
     </div>
     <div class="container">
       <div class="col-md-12" id="innerContainer">
 
       </div>
     </div>
+
     <script type="text/javascript" src="../jslib/jquery.min.js"></script>
     <script type="text/javascript" src="../jslib/bootstrap.min.js"></script>
     <script type="text/javascript" src="../jslib/react-with-addons.js"></script>
