--- a/client/scss/reactmovie.scss
+++ b/client/scss/reactmovie.scss
@@ -71,6 +71,8 @@ $detailsContainerWidth: auto;
             }
             .ratingYearContainer {
               text-align: right;
+              padding: 0;
+              padding-right: 0.5em;
               h3 {
                 font-size: 1.2em;
                 margin: 0 0 0 0;
