--- a/client/hbs/index.hbs
+++ b/client/hbs/index.hbs
@@ -11,6 +11,10 @@
     <link rel="stylesheet" href="{{ cssPath "allscss.css" }}" media="screen" charset="utf-8">
   </head>
   <body>
+    <!-- LOGIN -->
+    <div id="loginContainer" class="col-lg-12 col-md-12 col-xs-12 vertical-center">
+
+    </div>
 
     <!-- NAVBAR -->
     <div id="navBar">
