--- a/client/scss/login.scss
+++ b/client/scss/login.scss
@@ -3,6 +3,8 @@ $screen-medium-min: 768px;
 $screen-high-min: 992px;
 $screen-ultrahigh-min: 1200px;
 $loginLowResBackgroundImage: url('../images/img_low_res/login.jpg');
+$loginMediumResBackgroundImage: url('../images/img_medium_res/login.jpg');
+$loginHighResBackgroundImage: url('../images/img_high_res/login.jpg');
 
 //SMALLEST RESOLUTION
 @media(max-width: $screen-small-max) {
@@ -24,7 +26,7 @@ $loginLowResBackgroundImage: url('../images/img_low_res/login.jpg');
   #loginContainer {
     background-image: $loginLowResBackgroundImage;
     text-align: center;
-    position: fixed;
+    position: absolute;
     padding: 0;
     margin: 0;
     top: 0;
@@ -47,8 +49,73 @@ $loginLowResBackgroundImage: url('../images/img_low_res/login.jpg');
 //MEDIUM RESOLUTION
 @media(min-width: $screen-medium-min) {
 
+  .center {
+     float: none;
+     margin-left: auto;
+     margin-right: auto;
+  }
 
+  .vertical-center {
+    min-height: 100vh;
+
+    display: flex;
+    align-items: center;
+  }
+
+  #loginContainer {
+    background-image: $loginMediumResBackgroundImage;
+    text-align: center;
+    position: fixed;
+    padding: 0;
+    margin: 0;
+    top: 0;
+    left: 0;
+
+    #loginInnerDiv {
+      padding-top: 2em;
+      padding-bottom: 3em;
+      background-color: rgba(255, 255, 255, 0.3);
+      border-radius: 0.3em;
+
+      h3 {
+        font-size: 2em;
+      }
+    }
+  }
 }
-@media(min-width: $screen-ultrahigh-min) {
 
+@media(min-width: $screen-ultrahigh-min) {
+  .center {
+     float: none;
+     margin-left: auto;
+     margin-right: auto;
+  }
+
+  .vertical-center {
+    min-height: 100vh;
+
+    display: flex;
+    align-items: center;
+  }
+
+  #loginContainer {
+    background-image: $loginHighResBackgroundImage;
+    text-align: center;
+    position: fixed;
+    padding: 0;
+    margin: 0;
+    top: 0;
+    left: 0;
+
+    #loginInnerDiv {
+      padding-top: 2em;
+      padding-bottom: 3em;
+      background-color: rgba(255, 255, 255, 0.3);
+      border-radius: 0.3em;
+
+      h3 {
+        font-size: 2em;
+      }
+    }
+  }
 }
