--- a/client/scss/login.scss
+++ b/client/scss/login.scss
@@ -78,6 +78,10 @@ $loginHighResBackgroundImage: url('../images/img_high_res/login.jpg');
       border-radius: 0.3em;
 
       h3 {
+        font-size: 2.3em;
+      }
+
+      button {
         font-size: 2em;
       }
     }
