--- a/client/scss/navbar.scss
+++ b/client/scss/navbar.scss
@@ -131,7 +131,7 @@ $mobileNavBarDivOpenedTransition: visibility 100ms ease-out;
       justify-content: space-around;
 
       ul {
-
+        padding-left: 0;
         display: flex;
         align-items: center;
         a {
@@ -140,7 +140,7 @@ $mobileNavBarDivOpenedTransition: visibility 100ms ease-out;
 
         li {
           display: inline;
-          padding: 0 1em 0 1em;
+          padding: 0 0 0 1em;
           font-size: 1em;
           color: white;
         }
