SASS modification, smaller design enhancment

--- a/client/scss/discover.scss
+++ b/client/scss/discover.scss
@@ -7,15 +7,39 @@ $screen-ultrahigh-min: 1200px;
 @media(max-width: $screen-small-max) {
 
   #discoveryChooserContainer {
-    display: flex;
-    justify-content: center;
-    align-items: center;
 
-    margin-top: 1.4em;
+    margin-top: 1em;
+    padding: 0.5em;
+    background-color: rgba(207,211,212, 0.7);
+    border-radius: 0.3em;
 
-    div {
+    #discoveryChooserLabel {
       text-align: center;
-      font-size: 1.5em;
+      margin-top: 0.5em;
+
+      h3 {
+        margin: 0;
+        margin-bottom: 0.3em;
+        font-size: 1.2em;
+      }
+
+      div {
+        text-align: center;
+        font-size: 1.3em;
+      }
+    }
+
+    #discoveryChooserButtons {
+      text-align: center;
+
+      div {
+        padding: 0;
+      }
+
+      button {
+        font-size: 0.8em;
+
+      }
     }
   }
 
