navbar links modification

--- a/client/scss/navbar.scss
+++ b/client/scss/navbar.scss
@@ -105,7 +105,8 @@ $mobileNavBarDivOpenedTransition: visibility 50ms ease-out;
 
       #navbarOpenLinks {
 
-        text-align: center;
+        font-size: 0.8em;
+        text-align: left;
         ul {
 
           a {
