karma tests finally working

--- a/client/hbs/index.hbs
+++ b/client/hbs/index.hbs
@@ -37,8 +37,8 @@
     <script type="text/javascript" src="../jslib/jquery.min.js"></script>
     <script type="text/javascript" src="../jslib/bootstrap.min.js"></script>
     <script type="text/javascript" src="../jslib/react-with-addons.js"></script>
-    <script src="https://cdn.firebase.com/js/client/2.2.9/firebase.js"></script>
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/react-router/0.13.3/ReactRouter.min.js"></script>
+    <script type="text/javascript" src="../jslib/firebase.js"></script>
+    <script type="text/javascript" src="../jslib/reactrouter.js"></script>
     <script type="text/javascript" src="{{ jsPath "all.min.js" }}"></script>
   </body>
 </html>
