--- a/client/hbs/index.hbs
+++ b/client/hbs/index.hbs
@@ -38,7 +38,7 @@
     <script type="text/javascript" src="../jslib/bootstrap.min.js"></script>
     <script type="text/javascript" src="../jslib/react-with-addons.js"></script>
     <script type="text/javascript" src="../jslib/firebase.js"></script>
-    <script type="text/javascript" src="../jslib/reactrouter.js"></script>
+    <script type="text/javascript" src="../jslib/reactrouter.min.js"></script>
     <script type="text/javascript" src="{{ jsPath "all.min.js" }}"></script>
   </body>
 </html>
