Reflux: discover page store, actions working, React is modified with reflux-actions

--- a/client/hbs/index.hbs
+++ b/client/hbs/index.hbs
@@ -39,6 +39,7 @@
     <script type="text/javascript" src="../jslib/react-with-addons.js"></script>
     <script type="text/javascript" src="../jslib/firebase.js"></script>
     <script type="text/javascript" src="../jslib/reactrouter.min.js"></script>
+    <script type="text/javascript" src="../jslib/reflux.min.js"></script>
     <script type="text/javascript" src="{{ jsPath "all.min.js" }}"></script>
   </body>
 </html>
