--- a/client/scss/movie-details.scss
+++ b/client/scss/movie-details.scss
@@ -19,5 +19,23 @@ $screen-ultrahigh-min: 1200px;
 
 @media(min-width: $screen-ultrahigh-min) {
 
+  #movieDetailsCrew {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+
+    .creditMember {
+      text-align: center;
+    }
+
+    .creditMemberPic {
+      max-height: 8em;
+      margin-left: 2em;
+      margin-right: 2em;
+      margin-top: 2em;
+      margin-bottom: 0.5;
+    }
+  }
+
 
 }
